workspace = { members = ["common", "in-mem-client"] }
[package]
name = "in-mem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
clap = { version = "4.5.4", features = ["derive", "unicode", "env"] }
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
serde = { version = "1.0.201", features = ["derive"] }
bson = { version = "2.10.0" }
serde_yaml = "0.9.34"
uuid = "1.8.0"
common = { path = "common" }
sha2 = "0.10.8"
age = { version = "0.10.0" }
directories = "5.0.1"
async-trait = "0.1.80"

[profile.release]
lto = true
strip = true

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[[bin]]
name = "in-mem-server"
path = "src/main.rs"

[[bin]]
name = "in-mem-client"
path = "in-mem-client/src/main.rs"