[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
env_logger = "0.11.3"
log = "0.4.21"
chrono = "0.4.38"
bson = { version = "2.10.0" }
tokio = { version = "1.38.0", features = ["io-util", "net"] }
age = { version = "0.10.0" }
brotli2 = "0.3.2"
