[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
env_logger = "0.11.8"
log = "0.4.22"
chrono = "0.4.41"
bson = { version = "2.15.0" }
tokio = { version = "1.46.1", features = ["io-util", "net"] }
age = { version = "0.11.1" }
brotli2 = "0.3.2"
