[package]
name = "in-mem-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
clap = { version = "4.5.9", features = ["derive", "unicode", "env"] }
env_logger = "0.11.3"
log = "0.4.22"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
uuid = "1.9.1"
common = { path = "../common" }
age = { version = "0.10.0" }
bson = "2.11.0"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
