[package]
name = "in-mem-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
clap = { version = "4.5.41", features = ["derive", "unicode", "env"] }
env_logger = "0.11.8"
log = "0.4.27"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
uuid = "1.17.0"
common = { path = "../common" }
age = { version = "0.11.1" }
bson = "2.15.0"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
